--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
         <div class="h3 text-center" id="text1">เกม 3D หลากหลายรูปแบบมากกว่า 10,000 คนออนไลน์ในเวลาเดียวกันทุกวัน</div>
         <div class="h3 text-center" id="text2">สมัครบัญชีสมาชิกยินดีให้คำปรึกษาฟรี</div>
         <div class="content">
-            <a class="codebox" href="./chana/index.htm">
+            <a class="codebox" href="https://www.garena.tw/">
             <img src="./party.jpg" alt="party">
             </a>
         </div>
         <div class="foot">
-            <a class="codebox" href="./chana/index.htm">
+            <a class="codebox" href="https://www.garena.tw/">
             <img src="./contactus.png" alt="contace">
             </a>
         </div>
