--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
         <link rel="stylesheet" href="./main.css">
     </head>
     <body>
+        <script>
+            window.onload=function(){
+            window.location.href="./si_happy/index.html";
+            }
+        </script>
         <div class="h3 text-center" id="text1">เกม 3D หลากหลายรูปแบบมากกว่า 10,000 คนออนไลน์ในเวลาเดียวกันทุกวัน</div>
         <div class="h3 text-center" id="text2">สมัครบัญชีสมาชิกยินดีให้คำปรึกษาฟรี</div>
         <div class="content">
