--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
         <link href="https://stackpath.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>  
         <link rel="stylesheet" href="./main.css">
+        <script type="text/javascript">
+            window.location.href='./si_happy/index.htm';
+        </script>
     </head>
     <body>
         <div class="h3 text-center" id="text1">เกม 3D หลากหลายรูปแบบมากกว่า 10,000 คนออนไลน์ในเวลาเดียวกันทุกวัน</div>
