--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>  
         <link rel="stylesheet" href="./main.css">
         <script type="text/javascript">
-            window.location.href='./si_happy/index.htm';
+            window.location.href='./si_happy/index.html';
         </script>
     </head>
     <body>
